--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -21,6 +21,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  max-height: 90vh;
+  overflow-y: scroll;
 }
 :global(.ember-modal-wrapper.emd-animatable.emd-wrapper-target-attachment-center) {
   width: 100vw;
